# PorePythonPeople

./: .coveragerc  .datanavi_config.json  .gitignore  README.md  README_NEW.md  REFACTORING_SUMMARY.md  UserPersonas.md  UserPersonas.txt  data_navigator_riya.py  gantt-chart (1).xlsx  pyproject.toml  subcomponent_4_data_navi_gui.py  subcomponent_5_event_classifier_gui.py
Docs/: AGENT_ARCHITECTURE_SUMMARY.md  UseCases.md  UserPersonas.md  agent_context_index.md  cheme546_technology_review.pptx  components.md  feature_request_template.md  nanoporethon_textbook.md  operator_assistant_hybrid_architecture_plan.md  operator_assistant_interactibility_prompt_suite.md  technology_context.md
MATLABcode/: consensusMaker.m  eventclassifier.m  makeJumpsZMS.m  preprocess.m
UserPersonas/: ZachPersonas.txt
example_query_20260312_14:54:56/: search_query.txt
example_query_20260312_15:03:55/: search_query.txt
example_query_20260312_15:04:18/: search_query.txt
example_query_20260312_15:04:19/: search_query.txt
example_query_20260312_15:17:07/: search_query.txt
example_query_20260312_15:22:49/: search_query.txt
runtime/: __init__.py  context_manager.py  contracts.py  executor.py  gates.py  memory_writer.py  operator_assistant.py  operator_assistant_interactibility_scorecard.py  orchestrator.py  planner.py  policies.yaml  repo_ops.py  sequence_designer_parity_scorecard.py  skill_loader.py  stage_templates.yaml  state.py  waivers.py
src/: .datanavi_config.json  data_navigator_riya.py  subcomponent_1_prompt_user.py  subcomponent_3_data_navi_sub_directory.py  (+2 more)
(+99 files in other folders)
