[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoporethon"
version = "0.0.0"
description ="Nanopore Python program for analyzing Nanopore files"
dependencies = [
    "numpy",
    "pytest",
    "pytest-cov",
    "matplotlib",
    "h5py",
]

[tool.pytest.ini_options]
addopts = "--cov=src/nanoporethon --cov-report=term-missing --cov-fail-under=98"
